--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Build
+build
+
 .DS_Store
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
